finalizing project for school presentation

--- a/Borgen/Borgen-Info.plist
+++ b/Borgen/Borgen-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>Tom.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>799N9ZYHX3.nl.peperzaken.tom</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
